--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,17 @@
+.DS_Store
+node_modules/
+dist/
+backend/public/
+
+# local env files
+.env.local
+.env.*.local
+
+# Vue config & goorm IDE local config
+vue.config.js
+goorm.manifest
+
+
 # Logs
 logs
 *.log
